--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://canada-ca.github.io" # the base hostname & protocol for your site
+twitter_username: canada-ca
+github_username:  canada-ca
+
+# Translations
 title:
   en: Canada-ca
   fr: Canada-ca
@@ -14,7 +20,7 @@ description:
   en: Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
   fr: Écrivez une super description de votre nouveau site ici. Vous pouvez modifier cette ligne dans _config.yml. Elle apparaîtra dans la balise meta description (pour les résultats sur Google) et dans le fil RSS feed.xml.
 index:
-  en:
+  en: index.html
   fr: accueil.html
 home:
   en: Home
@@ -22,10 +28,40 @@ home:
 feed:
   en: /feed.xml
   fr: /flux.xml
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://canada-ca.github.io" # the base hostname & protocol for your site
-twitter_username: canada-ca
-github_username:  canada-ca
+language:
+  en: English
+  fr: Français
+SkipToMain:
+  en: Skip to main content
+  fr: Passer au contenu principal
+SkipToAbout:
+  en: Skip to "About this site"
+  fr: Passer à « À propos de ce site »
+LanguageSelection:
+  en: Language selection
+  fr: Sélection de la langue
+GoC:
+  en: Government of Canada
+  fr: Gouvernement du Canada
+SearchAndMenus:
+  en: Search and menus
+  fr: Recherche et menus
+SearchWebsite:
+  en: Search website
+  fr: Recherchez le site Web
+SearchCanadaCa:
+  en: Search Canada.ca
+  fr: Rechercher dans Canada.ca
+Search:
+  en: Search
+  fr: Recherche
+TopicsMenu:
+  en: Topics menu
+  fr: Menu des sujets
+YouAreHere:
+  en: You are here
+  fr: Vous êtes ici
+ 
 
 # Build settings
 markdown: kramdown
