Add GC activities footer from CDN

--- a/_config.yml
+++ b/_config.yml
@@ -64,6 +64,9 @@ TopicsMenu:
 YouAreHere:
   en: You are here
   fr: Vous êtes ici
+GCActivitiesInitiatives:
+  en: Government of Canada activities and initiatives
+  fr: Activités et initiatives du gouvernement du Canada
  
 
 # Build settings
