--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ home:
   en: Home
   fr: Accueil
 AllPosts:
-  en: All Posts
-  fr: Tous les Articles
+  en: Canada.ca blog
+  fr: blogue de Canada.ca
 feed:
   en: /feed.xml
   fr: /flux.xml
