chore: Add initial Markdownlint setup
Ignore all failures for now

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://canada-ca.github.io" # the base hostname & protocol for your site
 twitter_username: canada-ca
 github_username:  canada-ca
+exclude: ['README.md', 'node_modules/']
 
 # Translations
 title:
