--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/canada-ca.github.io" # the subpath of your site, e.g. /blog
 url: "http://canada-ca.github.io" # the base hostname & protocol for your site
 twitter_username: canada-ca
 github_username:  canada-ca
